# Agentic_AI

./: README.md  app.py  pipeline.py  pyproject.toml  requirements.txt  test.py  test2.py  token_cooldowns.json  tweet_extractor.py  visualisation.ipynb  x_prompt.txt
Agentic/: agent.py  pipeline.py
static/: script.js  script_landing.js  style.css
templates/: base.html  details.html  index.html  landing.html  loading.html
